fix added missing csquotes package

--- a/lab-instructions/modules/latex/newex/sort_scala_losning.tex
+++ b/lab-instructions/modules/latex/newex/sort_scala_losning.tex
@@ -33,6 +33,7 @@
 % För att inkludera källkod kan man använda 'verbatim',
 % men 'listings' ger ofta bättre resultat
 \usepackage{listings}                   % Källkodshantering
+\usepackage{csquotes}                   % För citat med \enquote{}
 
 % Konfigurera hur kodlistningar ska visas
 \lstset{
